update template of .env

--- a/.env_template
+++ b/.env_template
@@ -14,6 +14,8 @@ AZURE_SEARCH_ENDPOINT=""
 AZURE_SEARCH_API_KEY=""
 AZURE_SEARCH_API_VERSION="2024-05-01-preview"
 AZURE_SEARCH_INDEX_NAME=""
+AZURE_SEARCH_USE_SEMANTIC_SEARCH="true"
+AZURE_SEARCH_VECTOR_FIELD_NAMES="contentVector"
 
 # Azure Speech Service
 SPEECH_SERVICE_KEY=""
