--- a/.env_template
+++ b/.env_template
@@ -1,21 +1,21 @@
 # Azure OpenAI Service (Chat Completion API)
-AZURE_OPENAI_ENDPOINT=""
-AZURE_OPENAI_API_KEY=""
-AZURE_OPENAI_MODEL="gpt-4o"
-AZURE_OPENAI_TEMPERATURE="1.0"
+OPENAI_ENDPOINT=""
+OPENAI_API_KEY=""
+OPENAI_MODEL="gpt-4o"
+OPENAI_TEMPERATURE="1.0"
 
 # Azure Cosmos DB
-AZURE_COSMOS_CONNECTION_STRING=""
-AZURE_COSMOS_DB_NAME="db"
-AZURE_COSMOS_CONTAINER_NAME="avatar-chat-history"
+COSMOS_CONNECTION_STRING=""
+COSMOS_DB_NAME="db"
+COSMOS_CONTAINER_NAME="avatar-chat-history"
 
 # Azure AI Search
-AZURE_SEARCH_ENDPOINT=""
-AZURE_SEARCH_API_KEY=""
-AZURE_SEARCH_API_VERSION="2024-05-01-preview"
-AZURE_SEARCH_INDEX_NAME=""
-AZURE_SEARCH_USE_SEMANTIC_SEARCH="true"
-AZURE_SEARCH_VECTOR_FIELD_NAMES="contentVector"
+AI_SEARCH_ENDPOINT=""
+AI_SEARCH_API_KEY=""
+AI_SEARCH_API_VERSION="2024-05-01-preview"
+AI_SEARCH_INDEX_NAME=""
+AI_SEARCH_USE_SEMANTIC_SEARCH="true"
+AI_SEARCH_VECTOR_FIELD_NAMES="contentVector"
 
 # Azure Speech Service
 SPEECH_SERVICE_KEY=""
