change some default values

--- a/.env_template
+++ b/.env_template
@@ -13,7 +13,7 @@ COSMOS_CONTAINER_NAME="avatar-chat-history"
 AI_SEARCH_ENDPOINT=""
 AI_SEARCH_API_KEY=""
 AI_SEARCH_API_VERSION="2024-05-01-preview"
-AI_SEARCH_INDEX_NAME=""
+AI_SEARCH_INDEX_NAME="avatar-retrieved-docs"
 AI_SEARCH_USE_SEMANTIC_SEARCH="true"
 AI_SEARCH_VECTOR_FIELD_NAMES="contentVector"
 
